--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <input type="number" name="years" class="form-control" id="years" placeholder="Enter repayment year">
                             </div>
                             <div class="d-grid gap-2 form-group my-4">
-                            <button type="submit" class="btn btn-dark gap-2">Calulate Loan</button>
+                            <button type="submit" class="btn btn-dark gap-2">Calculate Loan</button>
                             </div>
 
                             <div class="loading">
