--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                    
 
                             <div class="results pt-3">
-                                <h5 class="heading display-8 pb-2">Results</h5>
+                                <h5 class="heading display-8 pb-2">Loan Payment Plan</h5>
                                 <div class="form-group">
                                     <div class="input-group mb-3">
                                         <span class="input-group-text" id="basic-addon1">Monthly Payment</span>
